# ClassWalk

./: .gitignore  draft.py  main.py  pyproject.toml
classwalk/: __init__.py  cleaner.py  handler.py  reader.py
classwalk/cleaner/: __init__.py  coicop.py  cpc.py  isco.py  isic.py
classwalk/drafts/: isco_employment_share.py  isic31_ir_to_isic4_ir_transition_matrix.py  transition_matrix_weight_calculation.py
classwalk/internal_data/: isco08_employment_share_lfs.csv  isco88_employment_share_lfs.csv  isic31_employment_share_lfs.csv  isic3_employment_share_lfs.csv  isic4_employment_share_lfs.csv
classwalk/metadata/: raw_files.yaml
classwalk/utils/: __init__.py  metadata_utils.py  text_utils.py
