[project]
name = "classwalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.18.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "pyzmq>=27.1.0",
    "requests>=2.32.3",
    "xlrd>=2.0.1",
]
